--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,50 @@
-absl-py==2.0.0
 asgiref==3.7.2
-astunparse==1.6.3
 backports.zoneinfo==0.2.1
-cachetools==5.3.2
-certifi==2023.7.22
+certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
-Django==4.2.7
-flatbuffers==23.5.26
-gast==0.4.0
-google-auth==2.23.4
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.59.2
-h5py==3.10.0
-idna==3.4
-importlib-metadata==6.8.0
+Django==4.2.9
+filelock==3.13.1
+fsspec==2023.12.2
+huggingface-hub==0.20.3
+idna==3.6
+Jinja2==3.1.3
 joblib==1.3.2
-keras==2.13.1
-libclang==16.0.6
-Markdown==3.5.1
-MarkupSafe==2.1.3
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.1
 nltk==3.8.1
-numpy==1.24.3
-oauthlib==3.2.2
-opt-einsum==3.3.0
+numpy==1.24.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
 packaging==23.2
-protobuf==4.25.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-regex==2023.10.3
+pillow==10.2.0
+pinecone-client==3.0.2
+PyYAML==6.0.1
+regex==2023.12.25
 requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-six==1.16.0
+safetensors==0.4.2
+scikit-learn==1.3.2
+scipy==1.10.1
+sentence-transformers==2.3.1
+sentencepiece==0.1.99
 sqlparse==0.4.4
-tensorboard==2.13.0
-tensorboard-data-server==0.7.2
-tensorflow==2.13.1
-tensorflow-estimator==2.13.0
-tensorflow-io-gcs-filesystem==0.34.0
-termcolor==2.3.0
+sympy==1.12
+threadpoolctl==3.2.0
+tokenizers==0.15.1
+torch==2.2.0
 tqdm==4.66.1
-typing-extensions==4.5.0
-urllib3==2.1.0
-werkzeug==3.0.1
-wrapt==1.16.0
-zipp==3.17.0
+transformers==4.37.2
+triton==2.2.0
+typing-extensions==4.9.0
+urllib3==2.2.0
