--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ nvidia-nvtx-cu12==12.1.105
 packaging==23.2
 pillow==10.2.0
 pinecone-client==3.0.2
+python-dotenv==1.0.1
 PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
