--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,15 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 Django==4.2.9
+enum-compat==0.0.3
 filelock==3.13.1
 fsspec==2023.12.2
 huggingface-hub==0.20.3
 idna==3.6
 Jinja2==3.1.3
 joblib==1.3.2
+langdetect==1.0.9
+logger==1.4
 MarkupSafe==2.1.5
 mpmath==1.3.0
 networkx==3.1
@@ -30,6 +33,7 @@ nvidia-nvtx-cu12==12.1.105
 packaging==23.2
 pillow==10.2.0
 pinecone-client==3.0.2
+psutil==5.9.8
 python-dotenv==1.0.1
 PyYAML==6.0.1
 regex==2023.12.25
@@ -39,11 +43,15 @@ scikit-learn==1.3.2
 scipy==1.10.1
 sentence-transformers==2.3.1
 sentencepiece==0.1.99
+six==1.16.0
 sqlparse==0.4.4
 sympy==1.12
 threadpoolctl==3.2.0
 tokenizers==0.15.1
 torch==2.2.0
+torch-model-archiver==0.9.0
+torch-workflow-archiver==0.2.11
+torchserve==0.9.0
 tqdm==4.66.1
 transformers==4.37.2
 triton==2.2.0
