--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+amqp==5.2.0
 asgiref==3.7.2
+async-timeout==4.0.3
 backports.zoneinfo==0.2.1
+billiard==4.2.0
+celery==5.3.6
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 Django==4.2.9
 enum-compat==0.0.3
 filelock==3.13.1
@@ -11,6 +18,7 @@ huggingface-hub==0.20.3
 idna==3.6
 Jinja2==3.1.3
 joblib==1.3.2
+kombu==5.3.5
 langdetect==1.0.9
 logger==1.4
 MarkupSafe==2.1.5
@@ -33,9 +41,12 @@ nvidia-nvtx-cu12==12.1.105
 packaging==23.2
 pillow==10.2.0
 pinecone-client==3.0.2
+prompt-toolkit==3.0.43
 psutil==5.9.8
+python-dateutil==2.8.2
 python-dotenv==1.0.1
 PyYAML==6.0.1
+redis==5.0.1
 regex==2023.12.25
 requests==2.31.0
 safetensors==0.4.2
@@ -56,4 +67,7 @@ tqdm==4.66.1
 transformers==4.37.2
 triton==2.2.0
 typing-extensions==4.9.0
+tzdata==2023.4
 urllib3==2.2.0
+vine==5.1.0
+wcwidth==0.2.13
