--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.2.0
 asgiref==3.7.2
 async-timeout==4.0.3
+attrs==23.2.0
 backports.zoneinfo==0.2.1
 billiard==4.2.0
 celery==5.3.6
@@ -11,13 +12,17 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 Django==4.2.9
+dnspython==2.5.0
 enum-compat==0.0.3
+eventlet==0.35.1
 filelock==3.13.1
 fsspec==2023.12.2
+greenlet==3.0.3
 huggingface-hub==0.20.3
 idna==3.6
 Jinja2==3.1.3
 joblib==1.3.2
+jsonlines==4.0.0
 kombu==5.3.5
 langdetect==1.0.9
 logger==1.4
@@ -45,6 +50,7 @@ prompt-toolkit==3.0.43
 psutil==5.9.8
 python-dateutil==2.8.2
 python-dotenv==1.0.1
+pytz==2024.1
 PyYAML==6.0.1
 redis==5.0.1
 regex==2023.12.25
@@ -62,7 +68,6 @@ tokenizers==0.15.1
 torch==2.2.0
 torch-model-archiver==0.9.0
 torch-workflow-archiver==0.2.11
-torchserve==0.9.0
 tqdm==4.66.1
 transformers==4.37.2
 triton==2.2.0
