--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
+aiohttp==3.9.3
+aiosignal==1.3.1
 amqp==5.2.0
+annotated-types==0.6.0
+anyio==4.2.0
 asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.2.0
 backports.zoneinfo==0.2.1
 billiard==4.2.0
+boto3==1.34.44
+botocore==1.34.44
 celery==5.3.6
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -11,23 +17,41 @@ click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+dataclasses-json==0.6.4
+distro==1.9.0
 Django==4.2.9
 dnspython==2.5.0
 enum-compat==0.0.3
 eventlet==0.35.1
+exceptiongroup==1.2.0
 filelock==3.13.1
+frozenlist==1.4.1
 fsspec==2023.12.2
 greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.3
+httpx==0.26.0
 huggingface-hub==0.20.3
 idna==3.6
 Jinja2==3.1.3
+jmespath==1.0.1
 joblib==1.3.2
 jsonlines==4.0.0
+jsonpatch==1.33
+jsonpointer==2.4
 kombu==5.3.5
+langchain==0.1.7
+langchain-community==0.0.20
+langchain-core==0.1.23
+langchain-openai==0.0.6
 langdetect==1.0.9
+langsmith==0.0.87
 logger==1.4
 MarkupSafe==2.1.5
+marshmallow==3.20.2
 mpmath==1.3.0
+multidict==6.0.5
+mypy-extensions==1.0.0
 networkx==3.1
 nltk==3.8.1
 numpy==1.24.4
@@ -43,11 +67,15 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
+openai==1.12.0
 packaging==23.2
 pillow==10.2.0
 pinecone-client==3.0.2
 prompt-toolkit==3.0.43
 psutil==5.9.8
+psycopg2==2.9.9
+pydantic==2.6.1
+pydantic-core==2.16.2
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 pytz==2024.1
@@ -55,15 +83,20 @@ PyYAML==6.0.1
 redis==5.0.1
 regex==2023.12.25
 requests==2.31.0
+s3transfer==0.10.0
 safetensors==0.4.2
 scikit-learn==1.3.2
 scipy==1.10.1
 sentence-transformers==2.3.1
 sentencepiece==0.1.99
 six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.27
 sqlparse==0.4.4
 sympy==1.12
+tenacity==8.2.3
 threadpoolctl==3.2.0
+tiktoken==0.6.0
 tokenizers==0.15.1
 torch==2.2.0
 torch-model-archiver==0.9.0
@@ -72,7 +105,9 @@ tqdm==4.66.1
 transformers==4.37.2
 triton==2.2.0
 typing-extensions==4.9.0
+typing-inspect==0.9.0
 tzdata==2023.4
-urllib3==2.2.0
+urllib3==1.26.18
 vine==5.1.0
 wcwidth==0.2.13
+yarl==1.9.4
