--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /venv
+.env
 db.sqlite3
 /pro/__pycache__
 /polls/__pycache__
@@ -6,11 +7,7 @@ db.sqlite3
 /finaldata
 /notebooks/pinecone.ipynb
 db.*
-s3-data/
-airflow/
 __pycache__
-aws/
-timescale/
 utils.py
 # Logs
 logs/
