--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -3,12 +3,15 @@ name: Django CI
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - '**/*.py'  # Triggers on changes to any Python file
   pull_request:
     branches: [ "main" ]
+    paths:
+      - '**/*.py'  # Triggers on changes to any Python file
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
